src/app/views/querying/gis/components/layers/map-layers.component.scss
.layers-container {
    position: relative;
    height: 100%;
    display: flex;
    flex-direction: column;
    padding: 1rem;
    grid-gap: 1rem;

    max-height: 100%;
    overflow-y: auto;

    & > .spacer-top {
        flex: 1;
    }

    & > .spacer-bottom {
        margin-bottom: 2rem;
    }
}

.drag-drop-layers {
    display: flex;
    flex-direction: column;
    grid-gap: 1rem;
}

.top-bottom-label {
    text-align: center;
    color: lightgray;
    margin: 0 6rem;
    letter-spacing: 0.5px;
    user-select: none;
}

.top-label {
    border-bottom: 1px solid lightgray;
}

.bottom-label {
    border-top: 1px solid lightgray;
}

.base-layers {
    display: flex;
    justify-content: space-evenly;
    padding: 0.5rem 0.25rem;
}

.base-layers > div {
    display: grid;
    place-items: center;
    height: 50px;
    width: 50px;
    border-radius: 0.2rem;
    transition: all 100ms ease-in-out;
}

.base-layers > div:hover {
    background: #f1f1f1;
    cursor: pointer;
}

.base-layers > div > svg {
    width: 30px;
    fill: #bfdab3;
}

.add-layer-button {
    all: unset;
    border-radius: 100%;
    border: 1px solid #1a186c;
    background: #4b49b6;
    position: absolute;
    bottom: -1.75rem;
    left: 50%;
    transform: translateX(-50%);
    padding: 1.5rem;
    display: grid;
    place-items: center;
    cursor: pointer;
}

.add-layer-button > svg {
    width: 1rem;
    transform: scale(1.2);
    fill: #f3f4f7;
}

.layer-card {
    display: flex;
    border: 1px solid lightgray;
    flex-direction: column;
    background: white;

    & > .card-header {
        display: grid;
        place-items: center;
        grid-gap: 0.5rem;
        grid-template-columns: 1fr 1fr 1fr;
        color: lightgray;

        & > span {
            width: 100%;
            user-select: none;
        }

        & > .resize-grip {
            display: grid;
            place-items: center;
            width: 2rem;
            height: 15px;
            grid-template-columns: repeat(3, 1fr);
            grid-template-rows: repeat(2, 1fr);
            cursor: grab;

            & > span {
                height: 3px;
                width: 3px;
                background-color: #bbb;
                border-radius: 50%;
                display: inline-block;
            }
        }

        & > .icons {
            display: flex;
            gap: 0.35rem;
            width: 100%;
            justify-content: flex-end;

            & > .eye, & > .remove {
                all: unset;

                & > svg {
                    width: 1rem;
                    fill: lightgray;
                    transition: all 100ms ease-in-out;
                    cursor: pointer;

                    &:hover {
                        fill: #4b49b6;
                    }
                }
            }
        }
    }

    & > .layer-card-body {
        display: flex;
        flex-direction: column;
        gap: 1rem;
    }

    & .title {
        word-break: break-all;

        & > .layer-name {
            text-transform: uppercase;
            letter-spacing: 0.5px;
            font-weight: bold;
        }

        & > .layer-size {
            text-transform: uppercase;
            letter-spacing: 0.5px;
        }

        & > .preview-data {
            all: unset;
            color: #4645ab;
            cursor: pointer;
            user-select: none;
            margin-left: 0.25rem;

            &:hover {
                text-decoration: underline;
            }
        }
    }

    & .config-sections {
        display: flex;
        flex-direction: column;
        gap: 0.5rem;
    }

    & .config-container {
        flex: 1;
    }
}

.layer-card-placeholder {
    border: 2px dashed #007bff;
    background-color: #e9f5ff;
    height: 50px;
}

.json-viewer-popover-body {
    max-height: 40vh;
    overflow-y: auto;
}

.add-layer-modal-body {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

